--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
-# Default ignored files
-.idea
-
 # Project exclude paths
 /out/
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
