--- a/src/fr/course/dal/settings.properties
+++ b/src/fr/course/dal/settings.properties
@@ -1,5 +1,5 @@
 # Paramètres de connexion à SQLServer
 driverdb=com.microsoft.sqlserver.jdbc.SQLServerDriver
-urldb=jdbc:sqlserver://127.0.0.1;databasename=ENI_DATA;
+urldb=jdbc:sqlserver://benjamin-it.com:1433;databasename=ENI_DATA;
 userdb=sa
-passworddb=Pa$$w0rd
+passworddb=P@ssword35
